@@ -1,3 +1,7 @@
+2003-02-01  Larry Jones  <lawrence.jones@eds.com>
+
+	* util.c (finish_output): Handle EINTR from waitpid.
+
 2002-09-24  Derek Price  <derek@ximbiot.com>
 
 	* Makefile.in: Regenerated using Automake 1.6.3.
